--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 <div class="absolute inset-0 opacity-5" style="background-image: radial-gradient(#444 1px, transparent 1px); background-size: 20px 20px;"></div>
                 <h3 class="font-bold text-xl brand-font mb-8 text-primary relative z-10">Quét mã thanh toán</h3>
                 <div class="bg-white p-4 rounded-2xl shadow-xl mb-6 transform hover:scale-105 transition-transform duration-300 relative z-10 border border-gray-100"><img id="vietqr-image" src="" class="w-56 h-56 object-contain"></div>
-                <div class="text-center relative z-10"><p class="text-xs text-gray-400 font-bold uppercase tracking-widest mb-1">Ngân hàng MB Bank</p><p class="text-lg font-bold text-primary mb-3">TRAN TRUONG VU</p><button class="flex items-center bg-white border border-gray-200 px-4 py-2 rounded-full text-sm font-mono hover:border-gold hover:text-gold transition-colors shadow-sm" onclick="navigator.clipboard.writeText('0587356681'); alert('Đã copy số tài khoản!')">0587356681 <i class="far fa-copy ml-2"></i></button></div>
+                <div class="text-center relative z-10"><p class="text-xs text-gray-400 font-bold uppercase tracking-widest mb-1">Ngân hàng MB Bank</p><p class="text-lg font-bold text-primary mb-3">DAO XUAN HIEU</p><button class="flex items-center bg-white border border-gray-200 px-4 py-2 rounded-full text-sm font-mono hover:border-gold hover:text-gold transition-colors shadow-sm" onclick="navigator.clipboard.writeText('9999999862003'); alert('Đã copy số tài khoản!')">9999999862003 <i class="far fa-copy ml-2"></i></button></div>
             </div>
             <div class="w-full md:w-7/12 p-8 md:p-10 flex flex-col bg-white">
                 <div class="flex justify-between items-start mb-8"><div><h2 class="text-3xl font-bold brand-font text-primary">Hóa Đơn</h2><p class="text-gray-400 mt-1 text-sm">Vui lòng kiểm tra kỹ thông tin trước khi chuyển khoản.</p></div><button onclick="app.closePaymentModal()" class="w-10 h-10 rounded-full hover:bg-gray-100 flex items-center justify-center transition-colors"><i class="fas fa-times text-gray-400 text-xl"></i></button></div>
@@ -508,7 +508,7 @@
                 document.getElementById('pay-user-name').innerText = currentUser.name;
                 document.getElementById('pay-user-phone').innerText = currentUser.phone;
                 document.getElementById('pay-total-amount').innerText = this.formatMoney(total);
-                document.getElementById('vietqr-image').src = `https://img.vietqr.io/image/MB-0587356681-compact.png?amount=${total}&addInfo=ORD${currentCheckoutOrder.id}&accountName=TRAN%20TRUONG%20VU`;
+                document.getElementById('vietqr-image').src = `https://img.vietqr.io/image/MB-9999999862003-compact.png?amount=${total}&addInfo=ORD${currentCheckoutOrder.id}&accountName=TRAN%20TRUONG%20VU`;
                 this.toggleCart();
                 document.getElementById('payment-modal').classList.remove('hidden');
             },
